[project]
name = "networksecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.5.20",
    "dagshub>=0.7.0",
    "dill>=0.4.1",
    "fastapi>=0.136.3",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pyaml>=26.2.1",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
